Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122970

Copying and pasting using shortcuts is not working in MacOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.2, 6.8.0 FF
    • 6.7.0 Beta3
    • WebEngine
    • None
    • macOS
    • 6adbc4cfb (dev), 4854b3606 (6.7)

      Replication steps:

      1. Load http://qt.io
      2. Select some text on the page with  mouse.
      3. Copy using Cmd + C
      4. Paste it into a text editor of your choice

      Or 

      1. Visit http://google.com
      2. Write some words into the search field
      3. Select the text and use the copy shortcut on your keyboard, then use the paste shortcut to paste it into the browser URL bar.
      4. Repeat the same by copying from the URL bar into the search field in the web page.

       

        For Gerrit Dashboard: QTBUG-122970
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            anualiyas Anu Aliyas
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes